[gd_scene load_steps=5 format=3 uid="uid://b072yp7vg0pq5"]

[ext_resource type="Script" uid="uid://bkukf6ss3ofn6" path="res://Scenes/Projectiles/dagger_projectile.gd" id="1_1tvc6"]
[ext_resource type="Texture2D" uid="uid://cwlpat1thb6sr" path="res://Graphics/Character/dagger.png" id="2_sj423"]
[ext_resource type="AudioStream" uid="uid://bvs7l6d63xqvd" path="res://Sounds/sfx/daggerhit.mp3" id="3_sj423"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a7pqa"]
radius = 8.0
height = 48.0

[node name="DaggerProjectile" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_1tvc6")
sprite = ExtResource("2_sj423")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 16
visibility_layer = 16
rotation = 1.5708
shape = SubResource("CapsuleShape2D_a7pqa")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -4)
rotation = 0.785398
scale = Vector2(2, 2)
texture = ExtResource("2_sj423")

[node name="TimeToLive" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_sj423")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_time_to_live_timeout"]
